<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:background="@drawable/background_favorites_item">
        <TextView
            android:text="@string/select_image"
            android:gravity="center"
            android:textColor="@color/color_main"
            android:textSize="@dimen/font_size_20"
            android:padding="@dimen/font_size_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray">
        </View>

        <TextView
            android:text="@string/pick_from_galery"
            android:textColor="@color/black"
            android:padding="@dimen/font_size_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pickImage"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/gray">
        </View>
        <TextView
            android:text="@string/make_photo"
            android:padding="@dimen/font_size_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_make_photo"
            android:textColor="@color/black" />

    </LinearLayout>
</layout>