<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View" />

        <variable
            name="signUpVM"
            type="biz.ideus.ideuslibexample.view_models.SignUpActivityVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:gravity="center_horizontal"
                        android:text="@string/with_social_networks"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/font_size_17" />

                    <LinearLayout
                        android:id="@+id/ll_social"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/font_size_15"
                        android:paddingEnd="@dimen/font_size_15"
                        android:paddingStart="@dimen/font_size_15">

                        <Button
                            android:id="@+id/btn_login_fb"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="5dp"
                            android:onClick="@{signUpVM.onClickFaceBookLogin}"
                            android:layout_weight="1"
                            android:background="@drawable/facebook_btn_selector"
                            android:text="@string/facebook"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white" />

                        <Button
                            android:id="@+id/btn_login_twitter"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:onClick="@{signUpVM.onClickTwitterLogin}"
                            android:background="@drawable/twitter_btn_selector"
                            android:text="@string/twitter"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white" />

                        <Button
                            android:id="@+id/btn_login_google_plus"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginStart="5dp"
                            android:onClick="@{signUpVM.onClickGooglePlus}"
                            android:layout_weight="1"
                            android:background="@drawable/google_btn_selector"
                            android:text="@string/google_plus"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/font_size_15"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="30dp"
                            android:layout_height="2dp"
                            android:background="@color/light_gray" />

                        <LinearLayout
                            android:id="@+id/ll_login_with_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/login_with_email_btn_default"
                            android:clickable="true"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingBottom="5dp"
                            android:paddingEnd="20dp"
                            android:paddingStart="20dp"
                            android:paddingTop="5dp">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sign_up_with_email"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/font_size_15" />

                        </LinearLayout>

                        <View
                            android:layout_width="30dp"
                            android:layout_height="2dp"
                            android:background="@color/light_gray" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_edit_texts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="@dimen/font_size_15"
                        android:layout_marginStart="@dimen/font_size_15"
                        android:background="@drawable/corners_layout_gray_10dp"
                        android:orientation="vertical"
                        android:padding="@dimen/font_size_15">

                        <RelativeLayout
                            android:id="@+id/ll_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:visibility="@{signUpVM.visibilityClearNameImage}"
                                android:onClick="@{signUpVM.onClickClearFieldImage}"
                                android:id="@+id/iv_cancel_name"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_cancel" />

                            <EditText
                                android:id="@+id/et_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginBottom="@dimen/font_size_15"
                                android:layout_weight="1"
                                android:background="@null"
                                android:ems="10"
                                android:hint="@string/your_name"
                                android:inputType="text"
                                android:onTextChanged="@{signUpVM.onTextChangedName}"
                                android:text="@{signUpVM.name}"
                                android:textColor="@{ (int)signUpVM.titleColorName}"/>
                        </RelativeLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="@dimen/font_size_15"
                            android:background="@color/gray" />

                        <RelativeLayout
                            android:id="@+id/ll_login"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:visibility="@{signUpVM.visibilityClearEmailImage}"
                                android:onClick="@{signUpVM.onClickClearFieldImage}"
                                android:id="@+id/iv_cancel_email"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_cancel" />

                            <EditText
                                android:id="@+id/et_login"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginBottom="@dimen/font_size_15"
                                android:layout_weight="1"
                                android:background="@null"
                                android:ems="10"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:onTextChanged="@{signUpVM.onTextChangedEmail}"
                                android:text="@{signUpVM.email}"
                                android:textColor="@{ (int)signUpVM.titleColorEmail}"/>
                        </RelativeLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="@dimen/font_size_15"
                            android:background="@color/gray" />

                        <RelativeLayout
                            android:id="@+id/ll_create_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:visibility="@{signUpVM.visibilityClearPasswordImage}"
                                android:onClick="@{signUpVM.onClickClearFieldImage}"
                                android:id="@+id/iv_cancel_password"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_cancel" />

                            <EditText
                                android:id="@+id/et_create_password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="false"
                                android:layout_centerInParent="false"
                                android:layout_centerVertical="true"
                                android:layout_marginTop="@dimen/font_size_10"
                                android:layout_weight="1"
                                android:background="@null"
                                android:ems="10"
                                android:password="@{signUpVM.isPasswordShow}"
                                android:onTextChanged="@{signUpVM.onTextChangedPassword}"
                                android:hint="@string/create_password"
                                android:inputType="textPassword"
                                android:text="@{signUpVM.password}"
                                android:textColor="@{(int)signUpVM.titleColorPassword}"/>
                        </RelativeLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/rl_forgot_pas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/font_size_15">


                        <CheckBox
                            android:id="@+id/cb_show_pass"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            android:text="@string/show_password"
                            android:onClick="@{signUpVM.onCheckedChanged}"
                            style="@style/checkBoxComponent" />

                    </RelativeLayout>

                    <Button
                        android:id="@+id/btn_Crate_account"
                        android:onClick="@{signUpVM.onCreateAccountClick}"
                        style="@style/ButtonTransparentStyle"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/create_account"
                        android:layout_marginBottom="@dimen/font_size_15"
                        android:layout_marginEnd="@dimen/font_size_15"
                        android:layout_marginStart="@dimen/font_size_15" />

                    <TextView
                        android:id="@+id/textView7"
                        android:textSize="@dimen/font_size_15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/do_not_have_an_account" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/font_size_10"
                        android:layout_marginBottom="@dimen/font_size_10"
                        android:gravity="center">

                        <CheckBox
                            android:id="@+id/checkBox_privacy_policy"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            android:onClick="@{signUpVM.onCheckedChangedTermAndPolicy}"
                            android:text="@string/by_creating_account"
                            style="@style/checkBoxComponent"
                            android:layout_width="match_parent" />

                        <TextView
                            android:id="@+id/tv_privacy_policy"
                            android:textSize="@dimen/font_size_15"
                            android:textStyle="bold"
                            android:textColor="@color/green_btn_default"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_and_privacy_policy" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>